--- a/bpmn-metadata-annotation-processor/build.gradle
+++ b/bpmn-metadata-annotation-processor/build.gradle
@@ -1,14 +1,9 @@
-group 'io.github.devbhuwan'
-version '1.0-SNAPSHOT'
-
-apply plugin: 'java'
-
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile([
+            "$appLibs.autoService",
+            project(":bpmn-metadata-core")
+    ])
+    testCompile([
+            "$appLibs.annotationProcessorTestingJunit4"
+    ])
 }
