--- a/gradle.properties
+++ b/gradle.properties
@@ -43,3 +43,5 @@ immutableVersion=2.5.5
 camundaSpringBootStarter=2.1.2
 activitiSpringBootStarter=6.0.0
 nexusStagingPluginVersion=0.9.0
+annotationProcessorTestingJunit4Version=0.1.0
+autoServiceVersion=1.0-rc3
