--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -4,30 +4,30 @@ ext {
 }
 
 appLibs += [
-        lombok                : "org.projectlombok:lombok",
-        guava                 : "com.google.guava:guava",
-        slf4j                 : "org.slf4j:slf4j-api",
-        junit                 : "junit:junit",
-        assertj               : "org.assertj:assertj-core",
-        gson                  : "com.google.code.gson:gson",
-        jackson               : "com.fasterxml.jackson.core:jackson-databind",
+        lombok                          : "org.projectlombok:lombok",
+        guava                           : "com.google.guava:guava",
+        slf4j                           : "org.slf4j:slf4j-api",
+        junit                           : "junit:junit",
+        assertj                         : "org.assertj:assertj-core",
+        gson                            : "com.google.code.gson:gson",
+        jackson                         : "com.fasterxml.jackson.core:jackson-databind",
 
-        h2                    : "com.h2database:h2:$h2Version",
-        logbackCore           : "ch.qos.logback:logback-core:$logbackVersion",
-        logbackClassic        : "ch.qos.logback:logback-classic:$logbackVersion",
-        logbackAccess         : "ch.qos.logback:logback-access:$logbackVersion",
-        commonLang3           : "org.apache.commons:commons-lang3:$commonLang3Version",
-        groovyAll             : "org.codehaus.groovy:groovy-all:$groovyAllVersion",
-        spockCore             : "org.spockframework:spock-core:$spockVersion",
-        jaxRs1Api             : "javax.ws.rs:jsr311-api:$jaxRs1ApiVersion",
-        jaxRs2Api             : "javax.ws.rs:javax.ws.rs-api:$jaxRs2ApiVersion",
-        logbackLogstashEncoder: "net.logstash.logback:logstash-logback-encoder:$logbackLogstashEncoderVersion",
-        janino                : "org.codehaus.janino:janino:$janinoVersion",
-        mutabilitydetector    : "org.mutabilitydetector:MutabilityDetector:0.9.2",
-        autoValue             : "com.google.auto.value:auto-value:1.3",
-        immutableValue        : "org.immutables:value:$immutableVersion",
-
-
+        h2                              : "com.h2database:h2:$h2Version",
+        logbackCore                     : "ch.qos.logback:logback-core:$logbackVersion",
+        logbackClassic                  : "ch.qos.logback:logback-classic:$logbackVersion",
+        logbackAccess                   : "ch.qos.logback:logback-access:$logbackVersion",
+        commonLang3                     : "org.apache.commons:commons-lang3:$commonLang3Version",
+        groovyAll                       : "org.codehaus.groovy:groovy-all:$groovyAllVersion",
+        spockCore                       : "org.spockframework:spock-core:$spockVersion",
+        jaxRs1Api                       : "javax.ws.rs:jsr311-api:$jaxRs1ApiVersion",
+        jaxRs2Api                       : "javax.ws.rs:javax.ws.rs-api:$jaxRs2ApiVersion",
+        logbackLogstashEncoder          : "net.logstash.logback:logstash-logback-encoder:$logbackLogstashEncoderVersion",
+        janino                          : "org.codehaus.janino:janino:$janinoVersion",
+        mutabilitydetector              : "org.mutabilitydetector:MutabilityDetector:0.9.2",
+        autoValue                       : "com.google.auto.value:auto-value:1.3",
+        immutableValue                  : "org.immutables:value:$immutableVersion",
+        annotationProcessorTestingJunit4: "name.falgout.jeffrey.testing:annotation-processor-testing-junit4:$annotationProcessorTestingJunit4Version",
+        autoService : "com.google.auto.service:auto-service:$autoServiceVersion"
 ]
 
 appPlugins += [
