--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -27,7 +27,8 @@ appLibs += [
         autoValue                       : "com.google.auto.value:auto-value:1.3",
         immutableValue                  : "org.immutables:value:$immutableVersion",
         annotationProcessorTestingJunit4: "name.falgout.jeffrey.testing:annotation-processor-testing-junit4:$annotationProcessorTestingJunit4Version",
-        autoService : "com.google.auto.service:auto-service:$autoServiceVersion"
+        autoService : "com.google.auto.service:auto-service:$autoServiceVersion",
+        javapoet : "com.squareup:javapoet:$javapoetVersion"
 ]
 
 appPlugins += [
