--- a/gradle.properties
+++ b/gradle.properties
@@ -45,3 +45,4 @@ activitiSpringBootStarter=6.0.0
 nexusStagingPluginVersion=0.9.0
 annotationProcessorTestingJunit4Version=0.1.0
 autoServiceVersion=1.0-rc3
+javapoetVersion=1.9.0
