--- a/gradle.properties
+++ b/gradle.properties
@@ -46,3 +46,4 @@ nexusStagingPluginVersion=0.9.0
 annotationProcessorTestingJunit4Version=0.1.0
 autoServiceVersion=1.0-rc3
 javapoetVersion=1.9.0
+camundaBpmnModelVersion=7.7.0
