--- a/examples/bpm-metadata-generator/pom.xml
+++ b/examples/bpm-metadata-generator/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>bpm-metadata-generator</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
 
 
     <dependencies>
@@ -15,7 +18,27 @@
             <groupId>io.github.devbhuwan</groupId>
             <artifactId>bpmn-metadata-annotation-processor</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <compilerArgs>
+                        <arg>-verbose</arg>
+                        <arg>-XprintRounds</arg>
+                        <arg>-XprintProcessorInfo</arg>
+                        <arg>-Xlint</arg>
+                        <arg>-J-verbose</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
